fix img align

--- a/servicerocket-signature/css/app.css
+++ b/servicerocket-signature/css/app.css
@@ -6,7 +6,7 @@
 }
 
 .servicerocket-logo {
-  float: left;
+  vertical-align: top;
   padding-right: 0.5em;
 }
 
